tests/basic/check/assert/040.pan.out
tests/basic/check/assert/040.pan:4:1-4: error: cannot solve constraints of f40
tests/basic/check/assert/040.pan:8:1-4: error: cannot solve constraints of f41